Add ALSA grabber

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,9 +40,13 @@ SET ( DEFAULT_AMLOGIC    OFF )
 SET ( DEFAULT_DISPMANX   OFF )
 SET ( DEFAULT_OSX        OFF )
 SET ( DEFAULT_X11        OFF )
-SET ( DEFAULT_QT         ON )
+SET ( DEFAULT_QT         ON  )
 SET ( DEFAULT_WS281XPWM  OFF )
 SET ( DEFAULT_AVAHI      ON  )
+SET ( DEFAULT_ALSA       OFF )
+SET ( DEFAULT_PULSE      OFF )
+SET ( DEFAULT_JACK       OFF )
+SET ( DEFAULT_SOUNDIO    OFF )
 SET ( DEFAULT_USE_SHARED_AVAHI_LIBS  ON )
 SET ( DEFAULT_USE_SYSTEM_FLATBUFFERS_LIBS OFF )
 SET ( DEFAULT_USE_SYSTEM_PROTO_LIBS OFF )
@@ -56,6 +60,10 @@ IF ( ${CMAKE_SYSTEM} MATCHES "Linux" )
 	SET ( DEFAULT_FB          ON )
 	SET ( DEFAULT_USB_HID     ON )
 	SET ( DEFAULT_CEC         ON )
+	SET ( DEFAULT_ALSA        ON )
+	SET ( DEFAULT_PULSE       ON )
+	SET ( DEFAULT_JACK        ON )
+	SET ( DEFAULT_SOUNDIO     ON )
 ELSE()
 	SET ( DEFAULT_V4L2        OFF )
 	SET ( DEFAULT_FB          OFF )
@@ -63,6 +71,10 @@ ELSE()
 	SET ( DEFAULT_TINKERFORGE OFF )
 	SET ( DEFAULT_USB_HID     OFF )
 	SET ( DEFAULT_CEC         OFF )
+	SET ( DEFAULT_ALSA        OFF )
+	SET ( DEFAULT_PULSE       OFF )
+	SET ( DEFAULT_JACK        OFF )
+	SET ( DEFAULT_SOUNDIO     OFF )
 ENDIF()
 
 if ( NOT DEFINED PLATFORM )
@@ -156,6 +168,18 @@ message(STATUS "ENABLE_FB = ${ENABLE_FB}")
 
 option(ENABLE_OSX "Enable the osx grabber" ${DEFAULT_OSX} )
 message(STATUS "ENABLE_OSX = ${ENABLE_OSX}")
+
+option(ENABLE_ALSA "Enable the alsa grabber" ${DEFAULT_ALSA})
+message(STATUS "ENABLE_ALSA = ${ENABLE_ALSA}")
+
+option(ENABLE_PULSE "Enable the pulse audio grabber" ${DEFAULT_PULSE})
+message(STATUS "ENABLE_PULSE = ${ENABLE_PULSE}")
+
+option(ENABLE_JACK "Enable the jack audio grabber" ${DEFAULT_JACK})
+message(STATUS "ENABLE_JACK = ${ENABLE_JACK}")
+
+option(ENABLE_SOUNDIO "Enable the soundio audio grabber" ${DEFAULT_SOUNDIO})
+message(STATUS "ENABLE_SOUNDIO = ${ENABLE_SOUNDIO}")
 
 option(ENABLE_SPIDEV   "Enable the SPIDEV device" ${DEFAULT_SPIDEV} )
 message(STATUS "ENABLE_SPIDEV   = ${ENABLE_SPIDEV}")
