--- a/libsrc/grabber/dispmanx/CMakeLists.txt
+++ b/libsrc/grabber/dispmanx/CMakeLists.txt
@@ -11,9 +11,12 @@ ENDIF()
 SET(CURRENT_HEADER_DIR ${CMAKE_SOURCE_DIR}/include/grabber)
 SET(CURRENT_SOURCE_DIR ${CMAKE_SOURCE_DIR}/libsrc/grabber/dispmanx)
 
-FILE ( GLOB DispmanxGrabberSOURCES "${CURRENT_HEADER_DIR}/Dispmanx*.h"  "${CURRENT_SOURCE_DIR}/*.h"  "${CURRENT_SOURCE_DIR}/*.cpp" )
+FILE (GLOB DispmanxGrabberSOURCES
+	"${CURRENT_HEADER_DIR}/Dispmanx*.h"
+	"${CURRENT_SOURCE_DIR}/*.h"
+	"${CURRENT_SOURCE_DIR}/*.cpp)
 
-add_library(dispmanx-grabber ${DispmanxGrabberSOURCES} )
+add_library(dispmanx-grabber ${DispmanxGrabberSOURCES})
 
 target_link_libraries(dispmanx-grabber
 	hyperion
