--- a/libsrc/grabber/amlogic/CMakeLists.txt
+++ b/libsrc/grabber/amlogic/CMakeLists.txt
@@ -4,9 +4,12 @@ INCLUDE (CheckIncludeFiles)
 SET(CURRENT_HEADER_DIR ${CMAKE_SOURCE_DIR}/include/grabber)
 SET(CURRENT_SOURCE_DIR ${CMAKE_SOURCE_DIR}/libsrc/grabber/amlogic)
 
-FILE ( GLOB AmlogicSOURCES "${CURRENT_HEADER_DIR}/Amlogic*.h"  "${CURRENT_SOURCE_DIR}/*.h"  "${CURRENT_SOURCE_DIR}/*.cpp" )
+FILE (GLOB AmlogicSOURCES
+	"${CURRENT_HEADER_DIR}/Amlogic*.h"
+	"${CURRENT_SOURCE_DIR}/*.h"
+	"${CURRENT_SOURCE_DIR}/*.cpp")
 
-add_library(amlogic-grabber ${AmlogicSOURCES} )
+add_library(amlogic-grabber ${AmlogicSOURCES})
 
 target_link_libraries(amlogic-grabber
 	hyperion
